--- a/app/iphone.html
+++ b/app/iphone.html
@@ -20,16 +20,16 @@
                             <a class="menu__link" href="index.html">Главная </a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Поломки</a>
+                            <a class="menu__link" href="breakdowns.html">Поломки</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Бренды</a>
+                            <a class="menu__link" href="brands.html">Бренды</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Новости</a>
+                            <a class="menu__link" href="index.html">Новости</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Контакты</a>
+                            <a class="menu__link" href="contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </nav>
@@ -184,152 +184,7 @@
                 </div>
             </div>
         </section>
-        <section class="breaking-page">
-            <div class="container">
-                <div class="breaking-page__inner">
-                    <div class="breaking-page__image-inner">
-                        <img class="breaking-page__image" alt="" src="images/brands/phones/iphone.jpg">
-                    </div>
-                    <div class="breaking-page__box">
-                        <div class="breaking-page__title">Ремонт MacBook в Краснодаре</div>
-                        <div class="breaking-page__headline">Сервисный центр "Доктор Гаджет"</div>
 
-                        <div class="breaking-page__box-inner">
-                            <div class="breaking-page__box-columns">
-                                <p class="breaking-page__subtitle">Стоимость:</p>
-                                <p class="breaking-page__price">От 1000р</p>
-                                <p class="breaking-page__subtitle">Время работы:</p>
-                                <p class="breaking-page__time">От 30 мин</p>
-                                <a class="breaking-page__link" href="#">Оставить заявку</a>
-                            </div>
-                            <div class="breaking-page__box-columns">
-                                <p class="breaking-page__subtitle">Телефон:</p>
-                                <a class="breaking-page__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
-                                <p class="breaking-page__subtitle">Адрес:</p>
-                                <p class="breaking-page__adress">2-я Целиноградская ул., 13</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <section class="price">
-            <div class="container">
-                <h3 class="slider-choice__title title">цены на ремонт Apple MacBook </h3>
-                <div class="price__inner">
-                    <div class="price__inner-title">
-                        <p class="price__item-title price__item-title--name">Наименование услуги</p>
-                        <p class="price__item-title price__item-title--time">Время работы</p>
-                        <p class="price__item-title price__item-title--price">Стоимость</p>
-                        <p class="price__item-title price__item-title--link">Починить</p>
-                    </div>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена дисплея Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена стекла дисплея Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена разъёма Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена аккумулятора Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена контроллера питания Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Диагностика Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена задней крышки Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">500</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена тачскрина Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена сенсора Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена динамиков Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Чистка сетки динамиков Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена микрофона Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена камеры Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Ремонт кнопки включения Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Ремонт кнопок громкости Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Ремонт платы Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                    <a class="price__service-line" href="#">
-                        <p class="price__item-service price__item-service--name">Замена аудио-кодека Iphone</p>
-                        <p class="price__item-service price__item-service--time">от 30 мин</p>
-                        <p class="price__item-service price__item-service--price">Бесплатно</p>
-                        <p class="price__item-service price__item-service--link">Починить</p>
-                    </a>
-                </div>
-            </div>
-        </section>
 
         <!--  <section class="slider-choice">
             <div class="container-slider">
