--- a/app/nokia.html
+++ b/app/nokia.html
@@ -20,16 +20,16 @@
                             <a class="menu__link" href="index.html">Главная </a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Поломки</a>
+                            <a class="menu__link" href="breakdowns.html">Поломки</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Бренды</a>
+                            <a class="menu__link" href="brands.html">Бренды</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Новости</a>
+                            <a class="menu__link" href="index.html">Новости</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Контакты</a>
+                            <a class="menu__link" href="contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </nav>
@@ -45,8 +45,8 @@
                         <img class="breaking-page__image" alt="" src="images/brands/phones/nokia.jpg">
                     </div>
                     <div class="breaking-page__box">
-                        <div class="breaking-page__title">Ремонт Nokia в Краснодаре</div>
-                        <div class="breaking-page__headline">Сервисный центр "Доктор Гаджет"</div>
+                        <h1 class="breaking-page__title">Ремонт телефонов Nokia в Краснодаре</h1>
+                        <p class="breaking-page__headline">Сервисный центр "Доктор Гаджет"</p>
 
                         <div class="breaking-page__box-inner">
                             <div class="breaking-page__box-columns">
