--- a/app/screen.html
+++ b/app/screen.html
@@ -20,16 +20,16 @@
                             <a class="menu__link" href="index.html">Главная </a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Поломки</a>
+                            <a class="menu__link" href="breakdowns.html">Поломки</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Бренды</a>
+                            <a class="menu__link" href="brands.html">Бренды</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Новости</a>
+                            <a class="menu__link" href="index.html">Новости</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Контакты</a>
+                            <a class="menu__link" href="contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </nav>
@@ -41,7 +41,7 @@
         <section class="breaking-page">
             <div class="container">
                 <div class="breaking-page__inner">
-                    <div class="breaking-page__image-inner">
+                    <div class="breaking-page__image-inner breaking-page__image-repair">
                         <img class="breaking-page__image" alt="" src="images/breaking-page/screen.jpg">
                     </div>
                     <div class="breaking-page__box">
@@ -67,18 +67,9 @@
                 </div>
             </div>
         </section>
-        <section class="description">
-            <h3 class="description__title title">ЗАМЕНА ЭКРАНА ТЕЛЕФОНА В КРАСНОДАРЕ</h3>
-            <div class="container">
-                <p class="description__text">
-                    Ваш телефон может упасть, его могут придавить, нечаянно сесть. При ношение телефона в сумке на него может упасть тяжелый или острый предмет, который поцарапает или продавит экран. При ношении телефона в карманах, он так же может получить повреждения,
-                    к примеру связка ключей рядом или какой-нибудь другой мелкий предмет может серьезно повредить экран телефона. Приносите его к нам, наши мастера проведут диагностику, и отремнтируют ваш телефон.
-                </p>
-            </div>
-        </section>
         <section class="brands">
             <div class="container">
-                <h3 class="brands__title title">Ремонтируем бренды</h3>
+                <h3 class="brands__title title">РЕМОНТИРУЕМ БРЕНДЫ</h3>
                 <div class="brands__inner">
                     <a class="brands__link" href="xiaomi.html">
                         <div class="brands__item">
@@ -95,12 +86,12 @@
                             <img class="brands__icon" src="images/brands/logo/huawei.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="honor.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/honor.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="meizu.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/meizu.png" alt="">
                         </div>
@@ -110,22 +101,22 @@
                             <img class="brands__icon" src="images/brands/logo/samsung.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="nokia.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/nokia.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="lenovo.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/lenovo.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="sony.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/sony.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="asus.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/asus.png" alt="">
                         </div>
@@ -133,6 +124,16 @@
                 </div>
             </div>
         </section>
+        <!--  <section class="description">
+            <h3 class="description__title title">ЗАМЕНА ЭКРАНА ТЕЛЕФОНА В КРАСНОДАРЕ</h3>
+            <div class="container">
+                <p class="description__text">
+                    Ваш телефон может упасть, его могут придавить, нечаянно сесть. При ношение телефона в сумке на него может упасть тяжелый или острый предмет, который поцарапает или продавит экран. При ношении телефона в карманах, он так же может получить повреждения,
+                    к примеру связка ключей рядом или какой-нибудь другой мелкий предмет может серьезно повредить экран телефона. Приносите его к нам, наши мастера проведут диагностику, и отремнтируют ваш телефон.
+                </p>
+            </div>
+        </section> -->
+
         <section class="repair">
             <div class="container">
                 <div class="repair__inner">
