--- a/app/acer-laptop.html
+++ b/app/acer-laptop.html
@@ -20,16 +20,16 @@
                             <a class="menu__link" href="index.html">Главная </a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Поломки</a>
+                            <a class="menu__link" href="breakdowns.html">Поломки</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Бренды</a>
+                            <a class="menu__link" href="brands.html">Бренды</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Новости</a>
+                            <a class="menu__link" href="index.html">Новости</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Контакты</a>
+                            <a class="menu__link" href="contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </nav>
@@ -41,13 +41,13 @@
         <section class="breaking-page">
             <div class="container">
                 <div class="breaking-page__inner">
+
                     <div class="breaking-page__image-inner">
                         <img class="breaking-page__image" alt="" src="images/brands/laptops/aser-laptop.jpg">
                     </div>
                     <div class="breaking-page__box">
-                        <div class="breaking-page__title">Ремонт ноутбуков Aser в Краснодаре</div>
-                        <div class="breaking-page__headline">Сервисный центр "Доктор Гаджет"</div>
-
+                        <h1 class="breaking-page__title">Ремонт ноутбуков Aser в Краснодаре</h1>
+                        <p class="breaking-page__headline">Сервисный центр "Доктор Гаджет"</p>
                         <div class="breaking-page__box-inner">
                             <div class="breaking-page__box-columns">
                                 <p class="breaking-page__subtitle">Стоимость:</p>
