--- a/app/brands.html
+++ b/app/brands.html
@@ -20,22 +20,21 @@
                             <a class="menu__link" href="index.html">Главная </a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#breaking">Поломки</a>
+                            <a class="menu__link" href="breakdowns.html">Поломки</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Бренды</a>
+                            <a class="menu__link" href="brands.html">Бренды</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Новости</a>
+                            <a class="menu__link" href="index.html">Новости</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Контакты</a>
+                            <a class="menu__link" href="contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </nav>
                 <a class="menu__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
             </div>
-
         </div>
     </header>
     <main>
@@ -49,7 +48,7 @@
                             <img class="brands__icon" src="images/brands/logo/xiaomi.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="apple.html">
+                    <a class="brands__link" href="iphone.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/apple.png" alt="">
                         </div>
@@ -141,157 +140,99 @@
                     </a>
                 </div>
             </div>
-            <div class="container">
-                <h3 class="brands__title title">Ремонт телевизоров</h3>
-                <div class="brands__inner">
-                    <a class="brands__link" href="xiaomi.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/xiaomi.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="apple.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/apple.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="huawei.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/huawei.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="honor.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/honor.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="meizu.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/meizu.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="samsung.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/samsung.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="nokia.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/nokia.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="lenovo.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/lenovo.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="sony.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/sony.png" alt="">
-                        </div>
-                    </a>
-                    <a class="brands__link" href="asus.html">
-                        <div class="brands__item">
-                            <img class="brands__icon" src="images/brands/logo/asus.png" alt="">
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </section>
 
 
+            <footer class="footer">
+                <div class="container">
+                    <div class="footer__inner">
+                        <div class="footer__adress adress">
+                            <div class="adress__inner">
+                                <img class="adress__logo" src="images/logo-white.png" alt="">
+                                <p class="adress__slogan">Ремонт смартфонов в Краснодаре</p>
+                                <a class="adress__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
 
-
-        <footer class="footer">
-            <div class="container">
-                <div class="footer__inner">
-                    <div class="footer__adress adress">
-                        <div class="adress__inner">
-                            <img class="adress__logo" src="images/logo-white.png" alt="">
-                            <p class="adress__slogan">Ремонт смартфонов в Краснодаре</p>
-                            <a class="adress__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
-
-                            <span class="adress__city">г.Краснодар</span>
-                            <p class="adress__adress">2-я Целиноградская ул., 13</p>
-                            <div class="adress__time-work">Пн-Сб: с 10 до 19 <br> Вс: Выходной</div>
-                            <iframe src="https://yandex.ru/sprav/widget/rating-badge/36672680032" width="150" height="50" frameborder="0"></iframe>
+                                <span class="adress__city">г.Краснодар</span>
+                                <p class="adress__adress">2-я Целиноградская ул., 13</p>
+                                <div class="adress__time-work">Пн-Сб: с 10 до 19 <br> Вс: Выходной</div>
+                                <iframe src="https://yandex.ru/sprav/widget/rating-badge/36672680032" width="150" height="50" frameborder="0"></iframe>
+                            </div>
                         </div>
-                    </div>
-                    <div class="footer__menu">
-                        <p class="footer__title">Доктор Гаджет</p>
-                        <ul class="footer__menu-list">
-                            <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Главная</a>
-                            </div>
-                            <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Поломки</a>
-                            </div>
-                            <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Бренды</a>
-                            </div>
-                            <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Акции</a>
-                            </div>
-                            <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Контакты</a>
-                            </div>
-                        </ul>
-                    </div>
-                    <div class="footer__brands">
-                        <p class="footer__title">Ремонт брендов</p>
-                        <div class="footer__brands-inner">
-                            <div class="footer__brands-columns">
-                                <ul class="footer__brands-list">
-                                    <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Xiaomi</a>
-                                    </div>
-                                    <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Apple</a>
-                                    </div>
-                                    <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Huawei</a>
-                                    </div>
-                                    <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Honor</a>
-                                    </div>
-                                    <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Meizu</a>
-                                    </div>
-                                </ul>
-                            </div>
-                            <div class="footer__brands-columns">
-                                <ul class="footer__brands-list">
-                                    <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Samsung</a>
-                                    </div>
-                                    <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Nokia</a>
-                                    </div>
-                                    <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Lenovo</a>
-                                    </div>
-                                    <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Sony</a>
-                                    </div>
-                                    <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Asus</a>
-                                    </div>
-                                </ul>
+                        <div class="footer__menu">
+                            <p class="footer__title">Доктор Гаджет</p>
+                            <ul class="footer__menu-list">
+                                <div class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Главная</a>
+                                </div>
+                                <div class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Поломки</a>
+                                </div>
+                                <div class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Бренды</a>
+                                </div>
+                                <div class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Акции</a>
+                                </div>
+                                <div class="footer__menu-item">
+                                    <a class="footer__menu-link" href="#">Контакты</a>
+                                </div>
+                            </ul>
+                        </div>
+                        <div class="footer__brands">
+                            <p class="footer__title">Ремонт брендов</p>
+                            <div class="footer__brands-inner">
+                                <div class="footer__brands-columns">
+                                    <ul class="footer__brands-list">
+                                        <div class="footer__brands-item">
+                                            <a class="footer__brands-link" href="#">Xiaomi</a>
+                                        </div>
+                                        <div class="footer__brands-item">
+                                            <a class="footer__brands-link" href="#">Apple</a>
+                                        </div>
+                                        <div class="footer__brands-item">
+                                            <a class="footer__brands-link" href="#">Huawei</a>
+                                        </div>
+                                        <div class="footer__brands-item">
+                                            <a class="footer__brands-link" href="#">Honor</a>
+                                        </div>
+                                        <div class="footer__brands-item">
+                                            <a class="footer__brands-link" href="#">Meizu</a>
+                                        </div>
+                                    </ul>
+                                </div>
+                                <div class="footer__brands-columns">
+                                    <ul class="footer__brands-list">
+                                        <div class="footer__brands-item">
+                                            <a class="footer__brands-link" href="#">Samsung</a>
+                                        </div>
+                                        <div class="footer__brands-item">
+                                            <a class="footer__brands-link" href="#">Nokia</a>
+                                        </div>
+                                        <div class="footer__brands-item">
+                                            <a class="footer__brands-link" href="#">Lenovo</a>
+                                        </div>
+                                        <div class="footer__brands-item">
+                                            <a class="footer__brands-link" href="#">Sony</a>
+                                        </div>
+                                        <div class="footer__brands-item">
+                                            <a class="footer__brands-link" href="#">Asus</a>
+                                        </div>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
+                    <div class="footer_copy">
+                        <p class="footer__copy-text">
+                            Представленные на сайте товарные знаки используются с правомерной информационной и описательной целью. iPhone, Macbook, iPad - правообладатель Apple Inc. (Эпл Инк.); Huawei и Honor - правообладатель HUAWEI TECHNOLOGIES CO., LTD. (ХУАВЕЙ ТЕКНОЛОДЖИС КО.,
+                            ЛТД.); Samsung – правообладатель Samsung Electronics Co. Ltd. (Самсунг Электроникс Ко., Лтд.); MEIZU - правообладатель MEIZU TECHNOLOGY CO., LTD.; Nokia - правообладатель Nokia Corporation (Нокиа Корпорейшн); Lenovo - правообладатель
+                            Lenovo (Beijing) Limited; Xiaomi - правообладатель Xiaomi Inc.; ZTE - правообладатель ZTE Corporation; HTC - правообладатель HTC CORPORATION (Эйч-Ти-Си КОРПОРЕЙШН); LG - правообладатель LG Corp. (ЭлДжи Корп.); Philips - правообладатель
+                            Koninklijke Philips N.V. (Конинклийке Филипс Н.В.); Sony - правообладатель Sony Corporation (Сони Корпорейшн); ASUS - правообладатель ASUSTeK Computer Inc. (Асустек Компьютер Инкорпорейшн); ACER - правообладатель Acer Incorporated
+                            (Эйсер Инкорпорейтед); DELL - правообладатель Dell Inc.(Делл Инк.); HP - правообладатель HP Hewlett-Packard Group LLC (ЭйчПи Хьюлетт Паккард Груп ЛЛК); Toshiba - правообладатель KABUSHIKI KAISHA TOSHIBA, also trading as Toshiba
+                            Corporation (КАБУШИКИ КАЙША ТОШИБА также торгующая как Тосиба Корпорейшн). Товарные знаки используется с целью описания товара, в отношении которых производятся услуги по ремонту.
+                        </p>
+                    </div>
                 </div>
-                <div class="footer_copy">
-                    <p class="footer__copy-text">
-                        Представленные на сайте товарные знаки используются с правомерной информационной и описательной целью. iPhone, Macbook, iPad - правообладатель Apple Inc. (Эпл Инк.); Huawei и Honor - правообладатель HUAWEI TECHNOLOGIES CO., LTD. (ХУАВЕЙ ТЕКНОЛОДЖИС КО.,
-                        ЛТД.); Samsung – правообладатель Samsung Electronics Co. Ltd. (Самсунг Электроникс Ко., Лтд.); MEIZU - правообладатель MEIZU TECHNOLOGY CO., LTD.; Nokia - правообладатель Nokia Corporation (Нокиа Корпорейшн); Lenovo - правообладатель
-                        Lenovo (Beijing) Limited; Xiaomi - правообладатель Xiaomi Inc.; ZTE - правообладатель ZTE Corporation; HTC - правообладатель HTC CORPORATION (Эйч-Ти-Си КОРПОРЕЙШН); LG - правообладатель LG Corp. (ЭлДжи Корп.); Philips - правообладатель
-                        Koninklijke Philips N.V. (Конинклийке Филипс Н.В.); Sony - правообладатель Sony Corporation (Сони Корпорейшн); ASUS - правообладатель ASUSTeK Computer Inc. (Асустек Компьютер Инкорпорейшн); ACER - правообладатель Acer Incorporated
-                        (Эйсер Инкорпорейтед); DELL - правообладатель Dell Inc.(Делл Инк.); HP - правообладатель HP Hewlett-Packard Group LLC (ЭйчПи Хьюлетт Паккард Груп ЛЛК); Toshiba - правообладатель KABUSHIKI KAISHA TOSHIBA, also trading as Toshiba
-                        Corporation (КАБУШИКИ КАЙША ТОШИБА также торгующая как Тосиба Корпорейшн). Товарные знаки используется с целью описания товара, в отношении которых производятся услуги по ремонту.
-                    </p>
-                </div>
-            </div>
-        </footer>
+            </footer>
     </main>
     <script src="js/main.min.js"></script>
 </body>
