--- a/app/mic.html
+++ b/app/mic.html
@@ -20,16 +20,16 @@
                             <a class="menu__link" href="index.html">Главная </a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Поломки</a>
+                            <a class="menu__link" href="breakdowns.html">Поломки</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Бренды</a>
+                            <a class="menu__link" href="brands.html">Бренды</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Новости</a>
+                            <a class="menu__link" href="index.html">Новости</a>
                         </li>
                         <li class="menu__item">
-                            <a class="menu__link" href="#">Контакты</a>
+                            <a class="menu__link" href="contacts.html">Контакты</a>
                         </li>
                     </ul>
                 </nav>
@@ -41,7 +41,7 @@
         <section class="breaking-page">
             <div class="container">
                 <div class="breaking-page__inner">
-                    <div class="breaking-page__image-inner">
+                    <div class="breaking-page__image-inner breaking-page__image-repair">
                         <img class="breaking-page__image" alt="" src="images/breaking-page/mic.jpg">
                     </div>
                     <div class="breaking-page__box">
@@ -73,7 +73,7 @@
                 <h3 class="slider-choice__title title">Почему выбирают "Доктор Гаджет"</h3>
                 <div class="slider-choice__inner">
                     <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
+                        <div class="slider-choice__item-inner ">
                             <img class="slider-choice__item-icon" src="images/icons/time.svg" alt="">
                             <h5 class="slider-choice__item-title item__title">Качество и скорость работы</h5>
                             <p class="slider-choice__item-text">Время ремонта в нашем сервисном центре занимает от 30 минут</p>
