--- a/app/breakdowns.html
+++ b/app/breakdowns.html
@@ -12,28 +12,35 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="header__top">
-                <a class="logo" href="index.html"><img src="images/logo.png" width="250px" height="60px" alt="Ремонт телефонов доктор гаджет"></a>
-                <nav class="menu">
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <a class="menu__link" href="index.html">Главная </a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="breakdowns.html">Поломки</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="brands.html">Бренды</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="index.html">Новости</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="contacts.html">Контакты</a>
-                        </li>
-                    </ul>
-                </nav>
-                <a class="menu__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
+            <div class="header__top-wrapper">
+                <div class="header__top">
+                    <a class="logo" href="index.html"><img src="images/logo.png" alt="Ремонт телефонов доктор гаджет"></a>
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a class="menu__link" href="index.html">Главная </a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="breakdowns.html">Поломки</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="brands.html">Бренды</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="index.html">Новости</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="contacts.html">Контакты</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <a class="menu__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
+                </div>
+                <div class="header__berger-menu">
+                    <button class="menu__btn">
+                         <img src="images/menu-btn.svg" alt="">
+                    </button>
+                </div>
             </div>
         </div>
     </header>
@@ -335,19 +342,19 @@
                         <p class="footer__title">Доктор Гаджет</p>
                         <ul class="footer__menu-list">
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Главная</a>
+                                <a class="footer__menu-link" href="index.html">Главная</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Поломки</a>
+                                <a class="footer__menu-link" href="breakdowns.html">Поломки</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Бренды</a>
+                                <a class="footer__menu-link" href="brands.html">Бренды</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Акции</a>
+                                <a class="footer__menu-link" href="index.html">Акции</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Контакты</a>
+                                <a class="footer__menu-link" href="contacts.html">Контакты</a>
                             </div>
                         </ul>
                     </div>
@@ -357,38 +364,38 @@
                             <div class="footer__brands-columns">
                                 <ul class="footer__brands-list">
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Xiaomi</a>
+                                        <a class="footer__brands-link" href="xiaomi.html">Xiaomi</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Apple</a>
+                                        <a class="footer__brands-link" href="iphone.html">Apple</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Huawei</a>
+                                        <a class="footer__brands-link" href="huawei.html">Huawei</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Honor</a>
+                                        <a class="footer__brands-link" href="honor.html">Honor</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Meizu</a>
+                                        <a class="footer__brands-link" href="meizu.html">Meizu</a>
                                     </div>
                                 </ul>
                             </div>
                             <div class="footer__brands-columns">
                                 <ul class="footer__brands-list">
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Samsung</a>
+                                        <a class="footer__brands-link" href="samsung.html">Samsung</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Nokia</a>
+                                        <a class="footer__brands-link" href="nokia.html">Nokia</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Lenovo</a>
+                                        <a class="footer__brands-link" href="lenovo.html">Lenovo</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Sony</a>
+                                        <a class="footer__brands-link" href="sony.html">Sony</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Asus</a>
+                                        <a class="footer__brands-link" href="asus.html">Asus</a>
                                     </div>
                                 </ul>
                             </div>
