--- a/app/camera.html
+++ b/app/camera.html
@@ -129,12 +129,12 @@
                             <img class="brands__icon" src="images/brands/logo/huawei.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="honor.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/honor.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="meizu.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/meizu.png" alt="">
                         </div>
@@ -144,22 +144,22 @@
                             <img class="brands__icon" src="images/brands/logo/samsung.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="nokia.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/nokia.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="lenovo.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/lenovo.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="sony.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/sony.png" alt="">
                         </div>
                     </a>
-                    <a class="brands__link" href="#">
+                    <a class="brands__link" href="asus.html">
                         <div class="brands__item">
                             <img class="brands__icon" src="images/brands/logo/asus.png" alt="">
                         </div>
@@ -188,19 +188,19 @@
                         <p class="footer__title">Доктор Гаджет</p>
                         <ul class="footer__menu-list">
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Главная</a>
+                                <a class="footer__menu-link" href="index.html">Главная</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Поломки</a>
+                                <a class="footer__menu-link" href="breakdowns.html">Поломки</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Бренды</a>
+                                <a class="footer__menu-link" href="brands.html">Бренды</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Акции</a>
+                                <a class="footer__menu-link" href="index.html">Акции</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Контакты</a>
+                                <a class="footer__menu-link" href="contacts.html">Контакты</a>
                             </div>
                         </ul>
                     </div>
@@ -210,38 +210,38 @@
                             <div class="footer__brands-columns">
                                 <ul class="footer__brands-list">
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Xiaomi</a>
+                                        <a class="footer__brands-link" href="xiaomi.html">Xiaomi</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Apple</a>
+                                        <a class="footer__brands-link" href="iphone.html">Apple</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Huawei</a>
+                                        <a class="footer__brands-link" href="huawei.html">Huawei</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Honor</a>
+                                        <a class="footer__brands-link" href="honor.html">Honor</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Meizu</a>
+                                        <a class="footer__brands-link" href="meizu.html">Meizu</a>
                                     </div>
                                 </ul>
                             </div>
                             <div class="footer__brands-columns">
                                 <ul class="footer__brands-list">
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Samsung</a>
+                                        <a class="footer__brands-link" href="samsung.html">Samsung</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Nokia</a>
+                                        <a class="footer__brands-link" href="nokia.html">Nokia</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Lenovo</a>
+                                        <a class="footer__brands-link" href="lenovo.html">Lenovo</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Sony</a>
+                                        <a class="footer__brands-link" href="sony.html">Sony</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Asus</a>
+                                        <a class="footer__brands-link" href="asus.html">Asus</a>
                                     </div>
                                 </ul>
                             </div>
