--- a/app/dell-laptop.html
+++ b/app/dell-laptop.html
@@ -242,19 +242,19 @@
                         <p class="footer__title">Доктор Гаджет</p>
                         <ul class="footer__menu-list">
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Главная</a>
+                                <a class="footer__menu-link" href="index.html">Главная</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Поломки</a>
+                                <a class="footer__menu-link" href="breakdowns.html">Поломки</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Бренды</a>
+                                <a class="footer__menu-link" href="brands.html">Бренды</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Акции</a>
+                                <a class="footer__menu-link" href="index.html">Акции</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Контакты</a>
+                                <a class="footer__menu-link" href="contacts.html">Контакты</a>
                             </div>
                         </ul>
                     </div>
@@ -264,38 +264,38 @@
                             <div class="footer__brands-columns">
                                 <ul class="footer__brands-list">
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Xiaomi</a>
+                                        <a class="footer__brands-link" href="xiaomi.html">Xiaomi</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Apple</a>
+                                        <a class="footer__brands-link" href="iphone.html">Apple</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Huawei</a>
+                                        <a class="footer__brands-link" href="huawei.html">Huawei</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Honor</a>
+                                        <a class="footer__brands-link" href="honor.html">Honor</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Meizu</a>
+                                        <a class="footer__brands-link" href="meizu.html">Meizu</a>
                                     </div>
                                 </ul>
                             </div>
                             <div class="footer__brands-columns">
                                 <ul class="footer__brands-list">
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Samsung</a>
+                                        <a class="footer__brands-link" href="samsung.html">Samsung</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Nokia</a>
+                                        <a class="footer__brands-link" href="nokia.html">Nokia</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Lenovo</a>
+                                        <a class="footer__brands-link" href="lenovo.html">Lenovo</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Sony</a>
+                                        <a class="footer__brands-link" href="sony.html">Sony</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Asus</a>
+                                        <a class="footer__brands-link" href="asus.html">Asus</a>
                                     </div>
                                 </ul>
                             </div>
