--- a/app/index.html
+++ b/app/index.html
@@ -12,30 +12,40 @@
 <body>
     <header class="header">
         <div class="container">
-            <div class="header__top">
-                <a class="logo" href="index.html"><img src="images/logo.png" width="250px" height="60px" alt="Ремонт телефонов доктор гаджет"></a>
-                <nav class="menu">
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <a class="menu__link" href="index.html">Главная </a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="breakdowns.html">Поломки</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="brands.html">Бренды</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="index.html">Новости</a>
-                        </li>
-                        <li class="menu__item">
-                            <a class="menu__link" href="contacts.html">Контакты</a>
-                        </li>
-                    </ul>
-                </nav>
-                <a class="menu__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
+            <div class="header__top-wrapper">
+                <div class="header__top">
+                    <a class="logo" href="index.html"><img src="images/logo.png" alt="Ремонт телефонов доктор гаджет"></a>
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a class="menu__link" href="index.html">Главная </a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="breakdowns.html">Поломки</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="brands.html">Бренды</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="index.html">Новости</a>
+                            </li>
+                            <li class="menu__item">
+                                <a class="menu__link" href="contacts.html">Контакты</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <a class="menu__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
+                </div>
+                <div class="header__berger-menu">
+                    <button class="menu__btn">
+                         <img src="images/menu-btn.svg" alt="">
+                    </button>
+                </div>
             </div>
             <div class="header__inner">
+                <div class="header__image-bg-small">
+                    <img class="header__image" src="images/header-bg.png" alt="">
+                </div>
                 <div class="header__text">
                     <h1 class="header__title">Ремонт телефонов в Краснодаре
                     </h1>
@@ -44,8 +54,8 @@
                     </p>
                     <a class="header__btn" href="tel:+79284396350">Позвонить нам</a>
                 </div>
-                <div class="header__image">
-                    <img src="images/header-bg.png" alt="">
+                <div class="header__image-bg">
+                    <img class="header__image" src="images/header-bg.png" alt="">
                 </div>
             </div>
         </div>
@@ -101,7 +111,7 @@
                                     <p class="breaking-item__text">Плохой контакт зарядки</p>
                                 </a>
                                 <a class="breaking-item__link" href="battery.html">
-                                    <p class="breaking-item__text">Греется во время<br> зарядки
+                                    <p class="breaking-item__text">Греется во время зарядки
                                     </p>
                                 </a>
                             </div>
@@ -171,6 +181,14 @@
                                 </a>
                                 <a class="breaking-item__link" href="button.html">
                                     <p class="breaking-item__text">Ремонт кнопки громкости</p>
+                                </a>
+                            </div>
+                            <div class="breaking-item__columns">
+                                <a class="breaking-item__link" href="button.html">
+                                    <p class="breaking-item__text">Кнопка продавилась</p>
+                                </a>
+                                <a class="breaking-item__link" href="button.html">
+                                    <p class="breaking-item__text">Ремонт кнопки выключения</p>
                                 </a>
                                 <a class="breaking-item__link" href="button.html">
                                     <p class="breaking-item__text">Ремонт кнопки home</p>
@@ -262,6 +280,7 @@
                 </div>
             </div>
         </section>
+        <!-- 
         <section class="slider-choice">
             <div class="container">
                 <h3 class="slider-choice__title title">Почему выбирают "Доктор Гаджет"</h3>
@@ -304,6 +323,7 @@
                 </div>
             </div>
         </section>
+       
         <section class="brands">
             <div class="container">
                 <h3 class="brands__title title">Ремонтируем бренды</h3>
@@ -429,19 +449,6 @@
                 </div>
             </div>
         </section>
-
-
-
-        <!--     <section class="call-master">
-            <div class="container">
-                <div class="call-master__inner">
-                    <div class="call-master__columns">
-                        <p class="call-master__title"></p>
-                    </div>
-                    <div class="call-master__columns"></div>
-                </div>
-            </div>
-        </section> -->
         <section class="contacts">
             <div class="container">
                 <h3 class="contacts__title title">мы на карте</h3>
@@ -500,19 +507,19 @@
                         <p class="footer__title">Доктор Гаджет</p>
                         <ul class="footer__menu-list">
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Главная</a>
+                                <a class="footer__menu-link" href="index.html">Главная</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Поломки</a>
+                                <a class="footer__menu-link" href="breakdowns.html">Поломки</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Бренды</a>
+                                <a class="footer__menu-link" href="brands.html">Бренды</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Акции</a>
+                                <a class="footer__menu-link" href="index.html">Акции</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Контакты</a>
+                                <a class="footer__menu-link" href="contacts.html">Контакты</a>
                             </div>
                         </ul>
                     </div>
@@ -522,38 +529,38 @@
                             <div class="footer__brands-columns">
                                 <ul class="footer__brands-list">
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Xiaomi</a>
+                                        <a class="footer__brands-link" href="xiaomi.html">Xiaomi</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Apple</a>
+                                        <a class="footer__brands-link" href="iphone.html">Apple</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Huawei</a>
+                                        <a class="footer__brands-link" href="huawei.html">Huawei</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Honor</a>
+                                        <a class="footer__brands-link" href="honor.html">Honor</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Meizu</a>
+                                        <a class="footer__brands-link" href="meizu.html">Meizu</a>
                                     </div>
                                 </ul>
                             </div>
                             <div class="footer__brands-columns">
                                 <ul class="footer__brands-list">
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Samsung</a>
+                                        <a class="footer__brands-link" href="samsung.html">Samsung</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Nokia</a>
+                                        <a class="footer__brands-link" href="nokia.html">Nokia</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Lenovo</a>
+                                        <a class="footer__brands-link" href="lenovo.html">Lenovo</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Sony</a>
+                                        <a class="footer__brands-link" href="sony.html">Sony</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Asus</a>
+                                        <a class="footer__brands-link" href="asus.html">Asus</a>
                                     </div>
                                 </ul>
                             </div>
@@ -571,7 +578,7 @@
                     </p>
                 </div>
             </div>
-        </footer>
+        </footer> -->
     </main>
     <script src="js/main.min.js"></script>
 </body>
