--- a/app/screen.html
+++ b/app/screen.html
@@ -69,7 +69,7 @@
         </section>
         <section class="brands">
             <div class="container">
-                <h3 class="brands__title title">РЕМОНТИРУЕМ БРЕНДЫ</h3>
+                <h3 class="brands__title title">выберите свой бренд</h3>
                 <div class="brands__inner">
                     <a class="brands__link" href="xiaomi.html">
                         <div class="brands__item">
@@ -124,82 +124,69 @@
                 </div>
             </div>
         </section>
-        <!--  <section class="description">
-            <h3 class="description__title title">ЗАМЕНА ЭКРАНА ТЕЛЕФОНА В КРАСНОДАРЕ</h3>
-            <div class="container">
-                <p class="description__text">
-                    Ваш телефон может упасть, его могут придавить, нечаянно сесть. При ношение телефона в сумке на него может упасть тяжелый или острый предмет, который поцарапает или продавит экран. При ношении телефона в карманах, он так же может получить повреждения,
-                    к примеру связка ключей рядом или какой-нибудь другой мелкий предмет может серьезно повредить экран телефона. Приносите его к нам, наши мастера проведут диагностику, и отремнтируют ваш телефон.
-                </p>
-            </div>
-        </section> -->
 
         <section class="repair">
             <div class="container">
+                <h3 class="brands__title title">заполните форму и мы вам перезвоним</h3>
                 <div class="repair__inner">
                     <div class="repair__columns">
                         <h5 class="repair__columns-title item__title">Связаться с нами:</h5>
                         <p class="repair__columns-text">
                             Заполните форму и мы сразу Вам перезвоним. Так же можете самостоятельно связаться с нами, позвонив по номеру телефона:
                         </p>
-                        <a class="repair__columns-phone menu__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
+                        <a class="repair__columns-phone menu__phone repair__phone" href="tel:+79528119728">+7 (952) 811-97-28</a>
                         <p class="repair__columns-text">
                             Ждем Ваших заявок и звонков!
                         </p>
                     </div>
-                    <!--  <div class="repair__columns">
-                        <img class="repair__columns-image" src="images/repair-phone.png" alt="" width="443px" height="268px">
-                    </div> -->
                     <div class="repair__columns-form">
                         <h5 class="repair__columns-title item__title">Заполните форму:</h5>
                         <form action="# " method="get " enctype="multipart/form-data ">
                             <input type="text " name="user-name " placeholder="Как вас зовут " tabindex="1">
                             <input type="tel " name="user-phone " placeholder="Ваш телефон " tabindex="2">
+                            <textarea name="user-text" placeholder="Опишите проблему" tabindex="3"></textarea>
                             <button class="repair__columns-btn" type="submit ">Оставить заявку</button>
                         </form>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="slider-choice">
-            <div class="container-slider">
-                <h3 class="slider-choice__title title">Почему выбирают "Доктор Гаджет"</h3>
-                <div class="slider-choice__inner">
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/time.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Качество и скорость работы</h5>
-                            <p class="slider-choice__item-text">Время ремонта в нашем сервисном центре занимает от 30 минут</p>
+        <section class="contacts">
+            <div class="container">
+                <h3 class="contacts__title title">мы на карте</h3>
+                <div class="contacts__inner">
+                    <div class="contacts__top contacts-top">
+                        <div class="contacts-top__item">
+                            <p class="contacts-top__title">Телефон:</p>
+                            <a class="contacts-top__phone contacts-top__text" href="tel:+79528119728">+7 (952) 811-97-28</a>
+                            <a class="contacts-top__link" href="#">Оставить заявку</a>
+                        </div>
+                        <div class="contacts-top__item">
+                            <p class="contacts-top__title">Адрес:</p>
+                            <p class="contacts-top__text">2-я Целиноградская ул., 13</p>
+                            <p class="contacts-top__subtitle">г.Краснодар</p>
+                        </div>
+                        <div class="contacts-top__item">
+                            <p class="contacts-top__title">Часы работы:</p>
+                            <p class="contacts-top__text">Пн-Сб: с 10 до 19 </p>
+                            <p class="contacts-top__text">Вс: Выходной</p>
                         </div>
                     </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/dollar.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Доступная стоимость работы</h5>
-                            <p class="slider-choice__item-text">Стоимоть работ нижу конкурентов, экономим средства клиентов</p>
-                        </div>
+                    <div class="contacts__map">
+                        <iframe class="contacts__map--frame" src="https://yandex.ru/map-widget/v1/?z=12&ol=biz&oid=36672680032" width="1220" height="400" frameborder="0"></iframe>
                     </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/setings.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Оригинальные запчасти</h5>
-                            <p class="slider-choice__item-text">Для ремонта используем оригинальные запчасти, либо аналоги</p>
-                        </div>
-                    </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/work-time.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Режим работы</h5>
-                            <p class="slider-choice__item-text">Пн-Сб: с 10 до 19 Вс: Выходной</p>
-                        </div>
-                    </div>
-                    <div class="slider-choice__item ">
-                        <div class="slider-choice__item-inner">
-                            <img class="slider-choice__item-icon" src="images/icons/master.svg" alt="">
-                            <h5 class="slider-choice__item-title item__title">Опытные мастера</h5>
-                            <p class="slider-choice__item-text">Квалифицированные инженеры с опытом работы от 5 лет</p>
-                        </div>
-                    </div>
+                </div>
+                <div class="contacts__text">
+                    <p class="contacts__text-item">Сервисный центр доктор гаджет осуществляет ремонт телефонов любого бренда и модификации. Выполняем восстановление мобильных гаджетов с различными повреждениями и программными сбоями срочно по оптимальным ценам. Мастера центра обладают
+                        высокой квалификацией для того, чтобы починить неработающую технику. При этом не важно, в каком она состоянии и насколько сложным окажется процесс восстановления.
+                    </p>
+                    <p class="contacts__text-item">Осуществляя ремонт мобильных телефонов, мы стремимся предельно оперативно устранить проблему, минимизировав тем самым финансовые расходы клиента и время ожидания. Затрачивая минимум времени, чтобы отремонтировать сотовый, пользователь
+                        сможет быстро восстановить контакт с окружающими, получив в свое распоряжение полностью исправное коммуникационное устройство.
+                    </p>
+                    <p class="contacts__text-item">
+                        Выполняя ремонт сотовых телефонов, наши мастера отлично осознают то, насколько важна данная техника для своего владельца. Ведь современный смартфон – это не только эффективный инструмент для общения и бизнеса, но и уникальные программные приложения в
+                        сочетании с неограниченным доступом к информации.
+                    </p>
                 </div>
             </div>
         </section>
@@ -225,19 +212,19 @@
                         <p class="footer__title">Доктор Гаджет</p>
                         <ul class="footer__menu-list">
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Главная</a>
+                                <a class="footer__menu-link" href="index.html">Главная</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Поломки</a>
+                                <a class="footer__menu-link" href="breakdowns.html">Поломки</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Бренды</a>
+                                <a class="footer__menu-link" href="brands.html">Бренды</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Акции</a>
+                                <a class="footer__menu-link" href="index.html">Акции</a>
                             </div>
                             <div class="footer__menu-item">
-                                <a class="footer__menu-link" href="#">Контакты</a>
+                                <a class="footer__menu-link" href="contacts.html">Контакты</a>
                             </div>
                         </ul>
                     </div>
@@ -247,38 +234,38 @@
                             <div class="footer__brands-columns">
                                 <ul class="footer__brands-list">
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Xiaomi</a>
+                                        <a class="footer__brands-link" href="xiaomi.html">Xiaomi</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Apple</a>
+                                        <a class="footer__brands-link" href="iphone.html">Apple</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Huawei</a>
+                                        <a class="footer__brands-link" href="huawei.html">Huawei</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Honor</a>
+                                        <a class="footer__brands-link" href="honor.html">Honor</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Meizu</a>
+                                        <a class="footer__brands-link" href="meizu.html">Meizu</a>
                                     </div>
                                 </ul>
                             </div>
                             <div class="footer__brands-columns">
                                 <ul class="footer__brands-list">
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Samsung</a>
+                                        <a class="footer__brands-link" href="samsung.html">Samsung</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Nokia</a>
+                                        <a class="footer__brands-link" href="nokia.html">Nokia</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Lenovo</a>
+                                        <a class="footer__brands-link" href="lenovo.html">Lenovo</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Sony</a>
+                                        <a class="footer__brands-link" href="sony.html">Sony</a>
                                     </div>
                                     <div class="footer__brands-item">
-                                        <a class="footer__brands-link" href="#">Asus</a>
+                                        <a class="footer__brands-link" href="asus.html">Asus</a>
                                     </div>
                                 </ul>
                             </div>
